# ostree-gir-test

./: .gitignore  Cargo.toml  Gir.toml  Makefile  README.md
ostree-sys/: Cargo.toml  Gir.toml  Makefile  build.rs
ostree-sys/src/: lib.rs
src/: lib.rs
src/auto/: flags.rs  mod.rs  repo.rs  repo_file.rs
