[package]
authors = ["Brian C. Lane <bcl@redhat.com>"]
name = "ostree"
version = "0.1.1"
description = "Rust ffi interface for ostree."
license = "GPL-3.0"
homepage = "https://github.com/weldr/ostree-rs"
repository = "https://github.com/weldr/ostree-rs"

keywords = ["ffi", "ostree"]

[dependencies]
libc = "0.2"
ostree-sys = { version="0.1.1", path = "ostree-sys" }
glib = { version = "0.1.1" }
glib-sys = { version = "0.3.2" }
gobject-sys = { version = "0.3.2" }
gio = { version = "0.1.1" }
gio-sys = { version = "0.3.2" }
